# arch-provisioner

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  ansible.cfg  arch.yaml  build_image.sh  buildiso.sh  default.nix  flake.nix  initvm.sh  justfile  liveconfig.yml  provision.sh  pyproject.toml  requirements.txt  schema.json  test.sh  testvm.sh
ansible/: requirements.yml
ansible/filter_plugins/: build_partition.py  build_partitions.py
ansible/group_vars/: all.yml
ansible/host_vars/: desktop.yml  macmini.yml
ansible/inventory/: hosts.yml  inventory.ini  inventory.yml
ansible/plays/: init.yml  ipxe_provision.yml  main.yml  provision.yml  wipe.yml
cert/: certbuilder.sh  openssl.cnf
cli/: go.mod  go.sum  main.go  makefile
cli/cmd/: root.go  venv.go
cli/pkg/: provisioner.go
hss/: README.md  build.go  buildiso.go  go.mod  go.sum  main.go  parsing.go  run.go  utils.go
hss/ssh_config/: config
iso/: buildiso.sh
profile.d/: runtime_setup.sh  setup.sh  update_hosts.sh
schemas/: arch_beelink.yml  arch_desktop.yml  arch_macmini.json  arch_macmini.yml  arch_vm.json  arch_vm.yml  arch_zima.yml  beelink.json  debian_beelink.yml  droplet.json
scripts/: add-inventory  add_server.sh  bootstrap_host.sh  build_setup.sh  connect-live  flash  generate_prompt.sh  homelab.sh  nix_env.sh  nix_setup.sh  raze_the_cluster.sh  remove_server.sh  render_env.sh  runtime_setup.sh  server  server_stats.sh  setup.sh  setup_hostvars.sh  template
server/: requirements.txt  schema.py  server.py
tests/: test.py
web/: package-lock.json  package.json
(+207 files in other folders)
