[project]
name = "arch-provisioner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "kubernetes>=32.0.1",
    "mkdocs-material>=9.6.9",
    "netaddr>=1.3.0",
    "pexpect>=4.9.0",
    "rich>=13.9.4",
    "hvac>=2.3.1"
]
