[project]
name = "arch-provisioner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible",
    "jinja2",
    "kubernetes",
    "mkdocs-material",
    "netaddr",
    "pexpect",
    "rich",
    "hvac",
    "passlib",
    "pydantic",
    "jinja2-cli",
    "routeros_api",
    "markupsafe"
]
